# mathematical-conciousness

./: Dockerfile  IMPLEMENTATION.md  LICENSE  README.md  demo.py  deploy_and_verify.sh  docker-compose.yml  example.py  main.py  pyproject.toml  requirements.txt  setup.py  test_basic.py  verify_deployment.py  verify_deployment_simple.py
core/: __init__.py  agent_factory.py  logic_field.py
examples/: demo.py  deploy_agents.py  test_network.py
network/: __init__.py  builder.py
src/: __init__.py  main.py
src/api/: __init__.py  endpoints.py  rest.py
src/computing/: __init__.py  protocols.py  quantum_sim.py
src/core/: __init__.py  agent_factory.py  entity.py  logic_field.py
src/network/: __init__.py  builder.py  distributed.py
tests/: __init__.py  test_agents.py  test_core.py  test_integration.py  test_logic_field.py  test_network.py  test_performance.py  test_protocols.py
